# credentials-server

./: README.md  init.sql  pyproject.toml
.github/workflows/: python-CI.yml
credentials/: __main__.py  api.py  endpoints.py  ports.py  schemas.py  security.py  settings.py
credentials/adapters/: __init__.py  credentials.py  cryptography.py  schemas.py
server/: connections.py  entrypoint.py  middleware.py  schemas.py  settings.py
server/adapters/: claims.py  credentials.py  schemas.py  tokens.py  users.py
server/endpoints/: auth.py
server/ports/: claims.py  credentials.py  tokens.py  users.py
server/services/: auth.py
server/templates/: sign-in.html
tests/: conftest.py  test_adapters.py  test_endpoints.py
